--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 alpaca-py
 alpaca_trade_api
-lumibot
 matplotlib
 numpy
 pandas
@@ -8,3 +7,4 @@ pandas-datareader
 quantstats
 requests
 yfinance
+statsmodels
